syntax = "proto2";

package rokid.open.speech.v1;

enum SpeechErrorCode {
  SUCCESS = 0;
  UNAUTHENTICATED = 2;
  CONNECTION_EXCEED = 3;
  RESOURCE_EXHASTED = 4;
  BUSY = 5;
  INTERNAL = 6;
	VAD_TIMEOUT = 7;
}

enum ReqType {
  START = 0;
  VOICE = 1;
  END = 2;
  TEXT = 3;
}

enum Codec {
  PCM = 0;
  OPU = 1;
  OPU2 = 2;
}

message PingPayload {
	required int32 req_id = 1;
  // timepoint of now
  required uint64 now_tp = 2;
	// timepoint of request send
  required uint64 req_tp = 3;
	// timepoint of response recv
  required uint64 resp_tp = 4;
}
